# rust-regression

program/: Cargo.toml
program/src/: lib.rs
project/: Cargo.toml  check.sh  rust-toolchain.toml
wasm-program/: Cargo.toml
wasm-project/: check.sh  rust-toolchain.toml
