[package]
name = "project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "program"

[dependencies]
orig-project = { package = "program", path = "../program", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"

[workspace]
